--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "devDependencies": {
     "custom-react-scripts": "0.0.23",
-    "gsap": "^1.19.1"
+    "gsap": "^1.19.1",
+    "react-router": "^3.0.2"
   },
   "dependencies": {
     "react": "^15.4.2",
