--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "devDependencies": {
     "custom-react-scripts": "0.0.23",
-    "gsap": "^1.19.1",
-    "react-router": "^3.0.2"
+    "gsap": "^1.19.1"
   },
   "dependencies": {
+    "history": "^4.3.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "4.0.0-alpha.6"
   },
   "scripts": {
     "start": "react-scripts start",
